[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Memedoro.gd" type="Script" id=1]
[ext_resource path="res://assets/break_sound.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/work_sound.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 3 )

[node name="Memedoro" type="Node"]
script = ExtResource( 1 )

[node name="BgColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 1 )
text = "12:10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Start" type="Button" parent="."]
margin_left = 112.0
margin_top = 128.0
margin_right = 208.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 248.0
margin_top = 152.0
margin_right = 316.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="work_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="break_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
